--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="okkonie portfolio app"
+      content="Website to showcase my work"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="icon" type="image/svg+xml" href="/icons/white.svg">
     <title>okkonie</title>
   </head>
   <body>
